# AletherEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  config.in
cmd/basic_renderer/: main.cpp
cmd/deferred_renderer/: main.cpp
cmd/editor/: main.cpp
cmd/editor2/: main.cpp
cmd/hello_imgui/: main.cpp
cmd/learn_compute_shader/: main.cpp
cmd/mesh_distance_field_tutorial/: main.cpp  scene_renderer.fs  scene_renderer.vs  sdf_atlas_3d.fs  sdf_atlas_3d_softshadow.fs
cmd/raymarch_sdf/: main.cpp  raymarch.frag
cmd/raymarch_sdf_cpu/: main.cpp
cmd/scene_01/: main.cpp
cmd/sdf_generator_gpu/: main.cpp
cmd/sdf_generator_gpu_v2/: main.cpp
cmd/skeletal_mesh/: main.cpp
resources/: bb_debug.txt  monkey.obj-0-8_debug.txt  monkey16.txt  monkey16_debug.txt  monkey64_debug.txt  sample.txt  sample2.txt  sample_cpu.txt  sample_debug.txt  trophySdf.txt  unit_cube.obj-0-8_debug.txt
resources/editor/: style.json
resources/gizmo/: Ring_XZ.glb  basic.blend  basic.blend.json  basic.blend1
resources/models/gizmo/: Scale_All.glb
resources/scenes/: editor2.json
resources/sdfgen/: atlas_0.txt  monkey.obj-0-8.txt  monkey16.txt  monkey64.txt  unit_cube.obj-0-8.txt
resources/shaders/gizmo/: gizmo.fs
resources/shaders/renderer/: basic_renderer.fs  box.fs  lines.vs  texture2d.fs
resources/shaders/renderer/deferred_renderer/: first_pass.fs  second_pass.fs
resources/shaders/sdf/: sdf_atlas_partial.fs  sdf_generator_gpu_v2.cs
resources_new/models/gizmo/: Ring_XY.glb  Ring_YZ.glb  Scale_X+.glb  Scale_Y+.glb  Scale_Z+.glb
resources_new/shaders/renderer/: basic_renderer.fs  texture2d.fs
resources_new/shaders/sdf/: sdf_atlas_partial.fs  sdf_generator_gpu.cs
src/: camera.h  config.h  file_system.cpp  file_system.h  idgen.cpp  idgen.h  sdf_generator_gpu.cpp  sdf_generator_gpu.h  sdf_model.cpp  sdf_model.h  sdf_model_packed.cpp  sdf_model_packed.h  texture.cpp  texture.h  util.cpp  util.cppm  util.h  window.cpp  window.h
src/components/: renderable.h
src/data/: _mod.cppm  bounding_box.cppm  boundingbox.cpp  boundingbox.h  color.cppm  compute_shader.cpp  compute_shader.h  file_system.cpp  file_system.cppm  file_system.h  logger.cppm  mesh.h  model.cpp  model.h  object.cpp  object.h  operation.cppm  ray.cpp  ray.h  scene.h  scene_node.cpp  scene_node.cppm  scene_node.h  shader.cpp  shader.h  stash.cppm  static_mesh.cpp  static_mesh.h  transform.cpp  transform.cppm  transform.h  util.cpp  util.h
src/data/serde/: _mod.cppm  common.cppm  glm.h  std.h  world.cpp  world.cppm  world.h
src/editor/: _mod.cppm  command.cppm  command_stack.cppm  content_browser.cpp  content_browser.cppm  content_browser.h  default_resources.cppm  dialog.cppm  editor_root.cppm  editor_root_layout.cpp  editor_root_layout.cppm  editor_root_layout.h  history_stack.cppm  imgui_integration.cpp  imgui_integration.cppm  item_inspector.cppm  scene_tree.cpp  scene_tree.cppm  scene_viewport.cpp  scene_viewport.cppm  scene_viewport.h
src/editor/history/: history.cppm  history_stack.cppm
src/gizmo/: basic_color_shader.fs  basic_color_shader.vs  gizmo.cpp  gizmo.fs  gizmo.h
src/graphics/: _mod.cppm  animation.cppm  basic_renderer.cpp  basic_renderer.fs  basic_renderer.h  box.vs  camera.cpp  camera.cppm  camera.h  compute_shader.cpp  compute_shader.cppm  compute_shader.h  font.cpp  font.cppm  framebuffer.cpp  framebuffer.cppm  framebuffer.h  gizmo.cppm  light.cpp  light.cppm  light.h  line_renderer.cpp  line_renderer.cppm  line_renderer.h  lines.fs  material.cppm  mesh.cppm  mesh.h  model.cpp  model.cppm  model.h  ray.cpp  ray.cppm  raymarcher_cpu.cpp  raymarcher_cpu.cppm  raymarcher_cpu.h  sdf_generator_gpu_v2.cpp  sdf_generator_gpu_v2.cs  sdf_generator_gpu_v2.h  shader.cpp  (+19 more)
src/graphics/gizmo/: gizmo.cpp  gizmo.h
src/graphics/renderer/: basic_renderer.cpp  basic_renderer.cppm  basic_renderer.h  deferred_renderer.cpp  deferred_renderer.cppm  deferred_renderer.h
src/graphics/sdf/: sdf_generator_gpu.cpp  sdf_generator_gpu.cppm  sdf_generator_gpu.h  sdf_generator_gpu_v2.cpp  sdf_generator_gpu_v2.cppm  sdf_generator_gpu_v2.h  sdf_generator_gpu_v2_shared.cpp  sdf_generator_gpu_v2_shared.h  sdf_model.cpp  sdf_model.cppm  sdf_model.h  sdf_model_packed.cpp  sdf_model_packed.cppm  sdf_model_packed.h
src/graphics/ui/: content_browser.cpp  content_browser.h  editor_root_layout.cpp  editor_root_layout.h  imgui_integration.cpp  imgui_integration.h  item_inspector.cpp  item_inspector.cppm  item_inspector.h  scene_tree.h  scene_viewport.cpp  scene_viewport.h
src/input/: _mod.cppm  window_event.cppm
src/input_handling/: window_event.cpp  window_event.cppm  window_event.h
src/renderer/: basic_renderer.cpp  basic_renderer.fs  basic_renderer.h  box.fs  box.vs  framebuffer.cpp  framebuffer.h  line_renderer.cpp  line_renderer.h  raymarcher_cpu.cpp  raymarcher_cpu.h  sdf_generator_gpu_v2.cpp  sdf_generator_gpu_v2.cs  sdf_generator_gpu_v2.h  sdf_generator_gpu_v2_shared.cpp  sdf_generator_gpu_v2_shared.h  thumbnail_generator.cpp  thumbnail_generator.h
src/renderer/ui/: content_browser.cpp  content_browser.h  editor_root_layout.cpp  editor_root_layout.h  imgui_integration.cpp  imgui_integration.h  item_inspector.cpp  item_inspector.h  scene_tree.cpp  scene_tree.h  scene_viewport.cpp  scene_viewport.h
src/serde/: _mod.cppm  common.cppm  world.cppm
src/shaders/: point_shadows.fs  raymarch.frag  raymarch.fs  raymarch.vs  raymarch_2d.frag  raymarch_2d_old.frag  raymarch_atlas.frag  raymarch_multi.frag  sdf_compute_shader.cs  sdf_generator_gpu.comp  sdf_generator_gpu.cs  texture2d.vs
src/shaders/mdf/: scene_renderer.fs
src/shaders/partial/: sdf_atlas.fs  sdf_atlas_shadow.fs
temp/debug/: monkey_16cpu.txt
temp/scenes/: editor2.json
